--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,141 +1,243 @@
+@import "@/styles/variables";
+
 .home {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.logo {
+  max-width: 90%;
+  object-position: bottom;
+  object-fit: contain;
 }
 
 .subLogo {
-    font-size: 2rem;
-    margin-top: 0.7rem;
+  font-size: 2rem;
+  margin-top: 0.7rem;
+
+  @media (max-width: $breakpoint-md) {
+    font-size: 1.5rem;
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    font-size: 1.1rem;
+  }
 }
 
 .links {
-    position: absolute;
-    bottom: 2rem;
-    display: flex;
-    gap: 3.75rem;
+  position: absolute;
+  bottom: 2rem;
+  display: flex;
+  gap: 3.75rem;
+  font-size: 1.5rem;
 
-    a {
-        font-size: 1.5rem;
-        text-decoration: none;
-        color: white;
-    }
+  a {
+    text-decoration: none;
+    color: white;
+  }
 
-    a:hover {
-        color: #c9c9c9;
-    }
+  a:hover {
+    color: #c9c9c9;
+  }
+
+  @media (max-width: $breakpoint-md) {
+    gap: 2.5rem;
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    gap: 0;
+    justify-content: space-between;
+    width: 90%;
+    font-size: 1.3rem;
+  }
+}
+
+.title {
+  font-size: 5rem;
+  margin-top: 0;
+  margin-bottom: unset;
+
+  @media (max-width: $breakpoint-lg) {
+    font-size: 3rem;
+  }
+
+  @media (max-width: $breakpoint-md) {
+    font-size: 2.25rem;
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    font-size: 1.9rem;
+  }
 }
 
 .quemSomos {
-    height: 100vh;
-    width: 100vw;
+  height: 100vh;
+  width: fit-content;
+  max-width: 95%;
+  margin: 0 auto;
+  gap: 10rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (max-width: $breakpoint-xl) {
+    flex-direction: column;
+    // text-align: center;
+    gap: 0;
+    justify-content: space-evenly;
+  }
+
+  .about {
+    max-width: 50rem;
+    height: fit-content;
+
+    .subTitle {
+      margin-top: 0.5rem;
+      margin-bottom: 0;
+      font-size: 2.5rem;
+      text-align: left;
+
+      @media (max-width: $breakpoint-lg) {
+        font-size: 2rem;
+      }
+
+      @media (max-width: $breakpoint-md) {
+        font-size: 1.6rem;
+      }
+
+      @media (max-width: $breakpoint-sm) {
+        font-size: 1.3rem;
+      }
+    }
+  }
+
+  .tecnologias {
+    gap: 1rem;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-end;
+    max-width: 100vw;
+
+    @media (max-width: $breakpoint-xl) {
+      display: none;
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+}
+
+.techSwiper {
+  display: none;
+
+  @media (max-width: $breakpoint-xl) {
+    display: block;
+    width: 100%;
+    display: flex;
     align-items: center;
 
-    .about {
-        width: 44rem;
-        height: fit-content;
-        margin-left: 15.625rem;
-    
-        .title {
-            font-size: 4rem;
-            margin-bottom: unset;
-        }
-        .subTitle {
-            margin-top: .5rem;
-            font-size: 2rem;
-        }
+    & :global(.swiper-wrapper) {
+      align-items: center;
     }
-    
-    .tecnologias {
-        margin-right: 15.625rem;
-        gap: 1rem;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+  }
 }
 
 .portfolio {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    .title {
-        font-size: 4rem;
-        margin-bottom: 2rem;
-    }
+  .title {
+    margin-bottom: 2rem;
+  }
 }
 
 .swiper {
-    --swiper-navigation-color: #fff;
-    // --swiper-navigation-sides-offset: -1rem;
-    max-width: 70rem;
+  --swiper-navigation-color: #fff;
+  width: 70rem;
+  max-width: 100%;
 
-    .swiperSlide {
-        display: flex;
-        
+  @media (max-width: $breakpoint-lg) {
+    --swiper-navigation-sides-offset: 5%;
+    --swiper-navigation-size: 2rem;
+    font-size: 1.25rem;
+  }
+
+  @media (max-width: $breakpoint-md) {
+    font-size: 0.875rem;
+  }
+
+  .swiperSlide {
+    display: flex;
+    justify-content: center;
+
+    @media (max-width: $breakpoint-lg) {
+      width: 100%;
+    }
+  }
+
+  .itemPortfolio {
+    margin: 0 2.5%;
+    position: relative;
+    aspect-ratio: 480/241;
+    width: 60rem;
+    max-width: 100%;
+    border-radius: 1.25rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
+    img {
+      object-fit: cover;
     }
 
-    .itemPortfolio {
-        margin: 0 auto;
-        position: relative;
-        aspect-ratio: 16/9;        
-        width: 60rem;
-        border-radius: 1.25rem;
-        overflow: hidden;
+    .info {
+      bottom: 0;
+      position: absolute;
+      width: 100%;
+      height: 21rem;
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 45.98%,
+        #000000 83.6%
+      );
+      align-items: flex-end;
+      display: flex;
+
+      .infoContent {
         display: flex;
-        flex-direction: column;
+        width: 100%;
+        padding: 1rem;
+        height: 3.5rem;
 
-        img {
-            object-fit: cover;
+        p {
+          display: block;
+          flex-grow: 1;
+          color: #fff;
+          margin: unset;
         }
 
-        .info {
-            bottom: 0;
-            position: absolute;
-            width: 100%;
-            height: 21rem;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0) 45.98%, #000000 83.6%);
-            align-items: end;
-            display: flex;
-
-            .infoContent {
-                display: flex;
-                width: 100%;
-                padding: 1rem;
-                height: 3.5rem;
-
-                p {
-                    display: block;
-                    font-size: 1.25rem;
-                    flex-grow: 1;
-                    color: #fff;
-                    margin: unset;
-                }
-    
-                .open {
-                    display: flex;
-                    gap: 0.5rem;
-                    justify-content: center;
-                    align-items: center;
-                    white-space: nowrap;
-                    border-radius: 0.6rem;
-                    width: fit-content;
-                    background-color: white;
-                    padding: 0.5rem;
-                    height: fit-content;
-                    color: black;
-                    text-decoration: none;
-                }
-            }
+        .open {
+          display: flex;
+          gap: 0.5rem;
+          justify-content: center;
+          align-items: center;
+          white-space: nowrap;
+          border-radius: 0.6rem;
+          width: fit-content;
+          background-color: white;
+          padding: 0.5rem;
+          height: fit-content;
+          color: black;
+          text-decoration: none;
         }
+      }
     }
+  }
 }
