add: scrollable page

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,12 +1,10 @@
 @import "@/styles/variables";
 
-.home {
+div.home {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
 }
 
 .logo {
@@ -62,20 +60,19 @@
   margin-bottom: unset;
 
   @media (max-width: $breakpoint-lg) {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 
   @media (max-width: $breakpoint-md) {
-    font-size: 2.25rem;
+    font-size: 3rem;
   }
 
   @media (max-width: $breakpoint-sm) {
-    font-size: 1.9rem;
+    font-size: 2.9rem;
   }
 }
 
-.quemSomos {
-  height: 100vh;
+div.quemSomos {
   width: fit-content;
   max-width: 95%;
   margin: 0 auto;
@@ -86,7 +83,6 @@
 
   @media (max-width: $breakpoint-xl) {
     flex-direction: column;
-    // text-align: center;
     gap: 0;
     justify-content: space-evenly;
   }
@@ -106,11 +102,11 @@
       }
 
       @media (max-width: $breakpoint-md) {
-        font-size: 1.6rem;
+        font-size: 2rem;
       }
 
       @media (max-width: $breakpoint-sm) {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
       }
     }
   }
@@ -130,7 +126,7 @@
   }
 }
 
-.techSwiper {
+div.techSwiper {
   display: none;
 
   @media (max-width: $breakpoint-xl) {
@@ -145,9 +141,7 @@
   }
 }
 
-.portfolio {
-  height: 100vh;
-  width: 100vw;
+div.portfolio {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -256,4 +250,12 @@
   @media (max-width: $breakpoint-lg) {
     display: block;
   }
+}
+
+.link {
+  cursor: pointer;
+}
+
+.mainSwiper {
+  height: 100vh;
 }
