--- a/src/components/Tec.module.scss
+++ b/src/components/Tec.module.scss
@@ -18,7 +18,11 @@
   }
 
   @media (max-width: $breakpoint-md) {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    font-size: 1.35rem;
   }
 }
 
