--- a/src/components/Tec.module.scss
+++ b/src/components/Tec.module.scss
@@ -22,7 +22,15 @@
   }
 
   @media (max-width: $breakpoint-sm) {
-    font-size: 1.35rem;
+    font-size: 1.4rem;
+  }
+
+  @media (max-width: $breakpoint-xs) {
+    font-size: 1.2rem;
+  }
+
+  @media (max-width: $breakpoint-xxs) {
+    font-size: 0.95rem;
   }
 }
 
