--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -32,7 +32,7 @@ $big: multiple-stars-box(100);
   }
 }
 
-.stats2Animation {
+.stars2Animation {
   width: 2em;
   height: 2em;
   background: transparent;
